--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.6.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.1",
